--- a/sql/知识库.md
+++ b/sql/知识库.md
@@ -29,3 +29,29 @@ com.rbac.framework.config.SecurityConfig是spring security的配置文件 ，里
 7. `SysPersonalController.login()`返回token识别码给用户，作为用户登录凭证。
 8. 下次用户访问需要授权的URL的时候，每次请求通过`JwtAuthenticationTokenFilter.doFilterInternal()`校验权限。
 9. spring security通过过滤器校验权限。例如`SysRoleController.add()`设置了只有管理员能访问：`@PreAuthorize("@ss.hasPermi('system:role')")`，则security会识别到这个过滤器，将当前登录用户的权限（来自缓存中的token）跟目前权限做比对，通过的才能继续访问。比对逻辑见`PermissionService.hasPermi()`等方法。
+
+## vue & element-ui
+
+### 多选框
+
+通过v-for实现的多选框示例，其中的`form.multiValues`是数组类型，`allValues`是逗号分隔的字符串。
+
+```
+<el-checkbox-group v-model="form.multiValues">
+  <el-checkbox v-for="(checkboxItem, checkboxIndex) in allValues.split(',')" :key="checkboxIndex" :label="checkboxItem">
+      {{ checkboxItem }}
+  </el-checkbox>
+</el-checkbox-group>
+```
+
+### 单选框
+
+通过v-for实现的单选框示例，`form.singleValue`是字符串，`allValues`是逗号分隔的字符串。
+
+```
+<el-radio-group v-model="form.singleValue">
+    <el-radio v-for="(radioItem, radioIndex) in allValues.split(',')" :key="radioIndex" :label="radioItem">
+      {{ radioItem }}
+    </el-radio>
+</el-radio-group>
+```
